# Damn-Vulnerable-RESTaurant-API-Game

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HALL_OF_FAME.md  README.md  docker-compose.yml  game.py  main.py  pyproject.toml  solution.md  start_app.sh  start_game.sh  stop_app.sh
.github/ISSUE_TEMPLATE/: feature_request.md
.github/PULL_REQUEST_TEMPLATE/: solution_submission_pull_request_template.md
.github/workflows/: test.yml
apis/: schemas_to_delete.py
apis/admin/: service.py  utils.py
apis/auth/: exceptions.py
apis/healthcheck/: service.py
apis/orders/: service.py
apis/users/: schemas.py
app/: .env  alembic.ini  config.py  game.py  init.py  init_app.py  main.py
app/apis/: router.py
app/apis/admin/: schemas.py  service.py  utils.py
app/apis/admin/services/: get_disk_stats_service.py  reset_chef_password_service.py
app/apis/auth/: schemas.py  service.py  utils.py
app/apis/auth/services/: get_profile_service.py  get_token_service.py  patch_profile_service.py  register_user_service.py  reset_password_new_password_service.py  reset_password_service.py  (+1 more)
app/apis/debug/: service.py
app/apis/healthcheck/: service.py
app/apis/menu/: schemas.py  service.py  utils.py
app/apis/orders/: schemas.py  service.py  utils.py
app/apis/referrals/: schemas.py  service.py  utils.py
app/apis/users/: schemas.py  service.py
app/challenges/: idor_challenge.py
app/db/: base.py  models.py  schemas.py  session.py
app/migrations/: env.py
app/migrations/versions/: 4a8c6c4dc451_added_reset_password_fields.py  e2470973db23_initial_migrations.py  f23331e973f8_added_referrals.py
app/tests/: conftest.py
app/tests/vulns/: level_0_technology_details_exposed_via_http_header.py  level_1_unrestricted_menu_item_deletion.py  level_2_unrestricted_profile_update_IDOR.py  level_3_privilege_escalation.py  level_4_server_side_request_forgery.py  level_5_remote_code_execution.py
db/: schemas.py  session.py
tests/: conftest.py
tests/vulns/: level_4_server_side_request_forgery.py
walkthrough/: Damn-Vulnerable-RESTaurant-API-Game CTF Web Applic f4cc903ddcbf49cb93a7ebe710af7837.md
(+23 files in other folders)
