[tool.poetry]
name = "Damn Vulnerable RESTaurant"
version = "0.1.0"
description = "Another Damn Vulnerable API"
authors = ["theowni <kpranczk7@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
httpx = "^0.24.1"
sqlalchemy = "^2.0.20"
psycopg2 = "^2.9.7"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
bcrypt = "^4.1.2"
requests = "^2.31.0"
alembic = "^1.13.1"
pytest = "8.3.4"
pytest-mock = "^3.14.0"
requests-mock = "^1.11.0"
colorama = "^0.4.6"
pylint = "^3.2.5"
pytest-json-report = "^1.5.0"
pytest-asyncio = "^0.25.0"
pillow = "^11.1.0"
psutil = "^7.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pre-commit = "^3.3.3"
isort = "5.12.0"
autoflake = "^2.3.1"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
norecursedirs = [
  "tests/challenges",
  "testing/example_scripts",
  ".*",
  "build",
  "dist",
  "postgres_data",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
